--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/users_demo?autoReconnect=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=aA123
+spring.datasource.username=restjdbc
+spring.datasource.password=aA123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 logging.level.org.springframework.jdbc.core.JdbcTemplate=trace
 logging.level.org.springframework.jdbc.core.StatementCreatorUtils=trace
