--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,14 @@
+# JDBC
 spring.datasource.url=jdbc:mysql://localhost:3306/users_demo?autoReconnect=true&useSSL=false
 spring.datasource.username=restjdbc
 spring.datasource.password=aA123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+# Custom 404
+spring.resources.add-mappings=false
+spring.mvc.throw-exception-if-no-handler-found=true
+
+# Logging
 #logging.level.org.springframework.web=DEBUG
 #logging.level.org.springframework.jdbc.core.JdbcTemplate=trace
 #logging.level.org.springframework.jdbc.core.StatementCreatorUtils=trace
