--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.resources.add-mappings=false
 spring.mvc.throw-exception-if-no-handler-found=true
 
 # Logging
+#debug=true
+#logging.level.root=debug
+#logging.level.dmv.spring.demo.model.repository.jdbc.RoleRepositoryJDBC=trace
 #logging.level.org.springframework.web=DEBUG
 #logging.level.org.springframework.jdbc.core.JdbcTemplate=trace
 #logging.level.org.springframework.jdbc.core.StatementCreatorUtils=trace
