--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,14 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.resources.add-mappings=false
 spring.mvc.throw-exception-if-no-handler-found=true
 
+# HTTPS
+security.require-ssl=true
+server.port: 8443
+server.ssl.key-store: keystore.p12
+server.ssl.key-store-password: aA123456
+server.ssl.keyStoreType: PKCS12
+server.ssl.keyAlias: tomcat
+
 # Logging
 #debug=true
 #logging.level.root=debug
