Add DB auto-population on start-up

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 # JDBC
-spring.datasource.url=jdbc:mysql://localhost:3306/users_demo?autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/?autoReconnect=true&useSSL=false
 spring.datasource.username=restjdbc
 spring.datasource.password=aA123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# Even though there are no @Entity or @Table annotations in this project,
+# Prevent Spring from trying to create in-memory DB (just a precaution)
+spring.jpa.hibernate.ddl-auto=none
 
 # Custom 404
 spring.resources.add-mappings=false
