--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<!-- Exclude DOCKER
 			<plugin>
 				<groupId>com.spotify</groupId>
 				<artifactId>docker-maven-plugin</artifactId>
@@ -115,6 +116,7 @@
 					</resources>
 				</configuration>
 			</plugin>
+			 -->
 		</plugins>
 	</build>
 
