--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # JDBC
-spring.datasource.url=jdbc:mysql://127.11.33.130:3306/?autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/?autoReconnect=true&useSSL=false
 spring.datasource.username=restjdbc
 spring.datasource.password=aA123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -12,12 +12,12 @@ spring.resources.add-mappings=false
 spring.mvc.throw-exception-if-no-handler-found=true
 
 # HTTPS
-#security.require-ssl=true
-#server.port: 8443
-#server.ssl.key-store: keystore.p12
-#server.ssl.key-store-password: aA123456
-#server.ssl.keyStoreType: PKCS12
-#server.ssl.keyAlias: tomcat
+security.require-ssl=true
+server.port: 8443
+server.ssl.key-store: keystore.p12
+server.ssl.key-store-password: aA123456
+server.ssl.keyStoreType: PKCS12
+server.ssl.keyAlias: tomcat
 
 # Logging
 #debug=true
