server starts on port 8080 but https - probably fixed

--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -11,5 +11,9 @@ spring.jpa.hibernate.ddl-auto=none
 spring.resources.add-mappings=false
 spring.mvc.throw-exception-if-no-handler-found=true
 
+# HTTPS
+security.require-ssl=false
+server.port: 8080
+
 # Logging
 logging.file=${OPENSHIFT_DIY_LOG_DIR}/app.log
