--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -21,8 +21,9 @@ spring.mvc.throw-exception-if-no-handler-found=true
 
 # Logging
 #debug=true
-#logging.level.root=debug
+logging.level.root=debug
 #logging.level.dmv.spring.demo.model.repository.jdbc.RoleRepositoryJDBC=trace
 #logging.level.org.springframework.web=DEBUG
 #logging.level.org.springframework.jdbc.core.JdbcTemplate=trace
 #logging.level.org.springframework.jdbc.core.StatementCreatorUtils=trace
+logging.file=${OPENSHIFT_DIY_LOG_DIR}/app.log
