--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -11,13 +11,9 @@ spring.jpa.hibernate.ddl-auto=none
 spring.resources.add-mappings=false
 spring.mvc.throw-exception-if-no-handler-found=true
 
-# HTTPS
-#security.require-ssl=true
-#server.port: 8443
-#server.ssl.key-store: keystore.p12
-#server.ssl.key-store-password: aA123456
-#server.ssl.keyStoreType: PKCS12
-#server.ssl.keyAlias: tomcat
+# HTTPS off
+security.require-ssl=false
+server.port: 8080
 
 # Logging
 #debug=true
