--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -13,6 +13,7 @@ spring.mvc.throw-exception-if-no-handler-found=true
 
 # HTTPS off
 security.require-ssl=false
+server.ssl.enabled=false
 server.port: 8080
 
 # Logging
