change Swagger appearance

--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -19,8 +19,8 @@ server.port: 8080
 # Logging
 #debug=true
 #logging.level.root=debug
-logging.level.dmv.spring.demo.security.TomcatHttpsConfig=DEBUG
-logging.level.org.springframework.web=DEBUG
+#logging.level.dmv.spring.demo.security.TomcatHttpsConfig=DEBUG
+#logging.level.org.springframework.web=DEBUG
 #logging.level.org.springframework.jdbc.core.JdbcTemplate=trace
 #logging.level.org.springframework.jdbc.core.StatementCreatorUtils=trace
 logging.file=${OPENSHIFT_DIY_LOG_DIR}/app.log
