--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ server.ssl.keyAlias: tomcat
 # Logging
 #debug=true
 #logging.level.root=debug
-#logging.level.dmv.spring.demo.model.repository.jdbc.RoleRepositoryJDBC=trace
+#logging.level.dmv.spring.demo.security.TomcatHttpsConfig=DEBUG
 #logging.level.org.springframework.web=DEBUG
 #logging.level.org.springframework.jdbc.core.JdbcTemplate=trace
 #logging.level.org.springframework.jdbc.core.StatementCreatorUtils=trace
