--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -1,15 +1,5 @@
 # JDBC
-spring.datasource.url=jdbc:mysql://127.11.33.130:3306/?autoReconnect=true&useSSL=false
-spring.datasource.username=restjdbc
-spring.datasource.password=aA123456
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-# Even though there are no @Entity or @Table annotations in this project,
-# Prevent Spring from trying to create in-memory DB (just a precaution)
-spring.jpa.hibernate.ddl-auto=none
-
-# Custom 404
-spring.resources.add-mappings=false
-spring.mvc.throw-exception-if-no-handler-found=true
+spring.datasource.url=jdbc:mysql://127.11.33.130:3306/?autoReconnect=true&allowMultiQueries=true&useSSL=false
 
 # HTTPS off
 security.require-ssl=false
@@ -17,10 +7,4 @@ server.ssl.enabled=false
 server.port: 8080
 
 # Logging
-#debug=true
-#logging.level.root=debug
-#logging.level.dmv.spring.demo.security.TomcatHttpsConfig=DEBUG
-#logging.level.org.springframework.web=DEBUG
-#logging.level.org.springframework.jdbc.core.JdbcTemplate=trace
-#logging.level.org.springframework.jdbc.core.StatementCreatorUtils=trace
 logging.file=${OPENSHIFT_DIY_LOG_DIR}/app.log
