--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 # JDBC
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/?autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/?autoReconnect=true&allowMultiQueries=true&useSSL=false
 spring.datasource.username=restjdbc
 spring.datasource.password=aA123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# To create stored procedures with Spring
+#spring.datasource.separator=^;
 # Even though there are no @Entity or @Table annotations in this project,
 # Prevent Spring from trying to create in-memory DB (just a precaution)
 spring.jpa.hibernate.ddl-auto=none
@@ -22,6 +24,7 @@ server.ssl.keyAlias: tomcat
 # Logging
 #debug=true
 #logging.level.root=debug
+logging.level.dmv.spring.demo.model.repository.JdbcConnector=TRACE
 #logging.level.dmv.spring.demo.security.TomcatHttpsConfig=DEBUG
 #logging.level.org.springframework.web=DEBUG
 #logging.level.org.springframework.jdbc.core.JdbcTemplate=trace
