Role Repository refactored using JDBC Connector

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,4 +26,4 @@ server.ssl.keyAlias: tomcat
 #logging.level.root=debug
 #logging.level.dmv.spring.demo.security.TomcatHttpsConfig=DEBUG
 #logging.level.org.springframework.web=DEBUG
-logging.level.dmv.spring.demo.model.repository.jdbc.JdbcConnector=TRACE
+#logging.level.dmv.spring.demo.model.repository.jdbc=TRACE
