--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.mvc.throw-exception-if-no-handler-found=true
 # HTTPS
 security.require-ssl=true
 server.port: 8443
-server.ssl.key-store: keystore.p12
+server.ssl.key-store: classpath:keystore.p12
 server.ssl.key-store-password: aA123456
 server.ssl.keyStoreType: PKCS12
 server.ssl.keyAlias: tomcat
